# limaronaldo_agentshield

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  action.yml
docs/: ARCHITECTURE.md  NEXT_STEPS.md  RULES.md  VALIDATION_REPORT.md
src/: lib.rs
src/adapter/: crewai.rs  langchain.rs  mcp.rs  mod.rs  openclaw.rs
src/analysis/: cross_file.rs  mod.rs
src/config/: mod.rs
src/ir/: mod.rs
src/output/: console.rs  sarif.rs
src/parser/: mod.rs  python.rs  typescript.rs
src/rules/builtin/: arbitrary_file_access.rs  command_injection.rs  dynamic_exec.rs  excessive_permissions.rs  mod.rs  no_lockfile.rs  prompt_injection.rs  self_modification.rs  ssrf.rs  typosquat.rs  unpinned_deps.rs
tests/fixtures/crewai_project/: pyproject.toml
tests/fixtures/crewai_project/src/tools/: fetch_tool.py  vuln_tool.py
tests/fixtures/langchain_project/: langgraph.json  pyproject.toml  requirements.txt
tests/fixtures/langchain_project/src/tools/: fetch_tool.py  shell_tool.py
tests/fixtures/mcp_servers/safe_filesystem/: index.ts  operations.ts  package.json  utils.ts
vscode/: CHANGELOG.md  README.md  package-lock.json  package.json
vscode/src/: diagnostics.ts  extension.ts  scanner.ts  types.ts
