[project]
name = "example-langchain-agent"
version = "0.1.0"
description = "Test fixture for LangChain adapter detection"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3,<1.0",
    "langchain-openai>=0.3,<1.0",
]

[project.urls]
Repository = "https://github.com/example/langchain-agent"
